# greendotrdma

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/greendot-helper/: Cargo.toml
crates/greendot-helper/src/: cmd.rs  dispatch.rs  fs.rs  hardware.rs  install.rs  lio.rs  lvm.rs  main.rs  modules.rs  nfs.rs  nvmet.rs  pam.rs  partition.rs  zfs.rs
crates/greendot-helper/tests/: socket.rs
crates/greendot-proto/: Cargo.toml
crates/greendot-proto/src/: lib.rs  osdetect.rs  types.rs  validate.rs  wire.rs
crates/greendot-web/: Cargo.toml
crates/greendot-web/src/: auth.rs  config.rs  dot.rs  fmt.rs  helper_client.rs  lib.rs  main.rs  reconcile.rs  snapshots.rs  state.rs  task_runner.rs
crates/greendot-web/src/actual/: apt.rs  block.rs  lio.rs  lvm.rs  mod.rs  nfs.rs  nic.rs  nvmet.rs  rdma.rs  zfs.rs
crates/greendot-web/src/metrics/: collect.rs  mod.rs
crates/greendot-web/src/routes/: block_export.rs  charts.rs  connections.rs  disks.rs  docs.rs  exports.rs  iscsi.rs  lvm.rs  mod.rs  nfs.rs  nvme.rs  settings.rs  snapshots.rs  tasks.rs  zfs.rs
crates/greendot-web/templates/: _connections.html  _disk_detail.html  _disks.html  _dots.html  _export_detail.html  _exports.html  _iscsi.html  _iscsi_detail.html  _iscsi_dots.html  _lv_detail.html  _lvm.html  _nfs.html  _nic_detail.html  _nvme.html  _nvme_detail.html  _nvme_dots.html  _part_detail.html  _policy_detail.html  _pool_create.html  _pool_detail.html  _pv_detail.html  _settings.html  _snap_detail.html  _snapshots.html  _tasks.html  _vg_create.html  _vg_detail.html  _zfs.html  _zvol_detail.html  base.html  charts.html  connections.html  dashboard.html  diagnose.html  disk_detail.html  disks.html  docs_democratic_csi.html  export_detail.html  exports.html  iscsi.html  (+24 more)
nix/: common.nix  vm-test-two-node.nix  vm-test.nix
pkg/: config.toml  greendot-helper.service  greendot-web.service  sysusers.conf  tmpfiles.conf
pkg/debian/: postinst
scripts/: build-deb.sh  smoke.sh  ubuntu-vm-guest.sh  ubuntu-vm-test.sh
static/: style.css
