[workspace]
resolver = "3"
members = [
    "crates/greendot-proto",
    "crates/greendot-helper",
    "crates/greendot-web",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/asdacap/greendotrdma"

[workspace.dependencies]
greendot-proto = { path = "crates/greendot-proto" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.30", features = ["socket", "user", "fs", "net"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rstest = "0.26"

[profile.release]
lto = "thin"
strip = true
