[package]
name = "greendot-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
greendot-proto = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
askama = "0.14"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process", "signal", "time", "sync"] }
toml = "0.9"

[dev-dependencies]
http-body-util = "0.1"
rstest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
