[package]
name = "greendot-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI making NVMe-oF/iSCSI exports over RDMA dead easy"

# Build: cargo build --release --workspace && cargo deb -p greendot-web --no-build
[package.metadata.deb]
name = "greendotrdma"
maintainer = "Amirul Ashraf <asdacap@gmail.com>"
copyright = "2026, Amirul Ashraf"
license-file = ["../../LICENSE", "0"]
section = "admin"
priority = "optional"
extended-description = """
GreenDotRDMA exposes ZFS zvols and partitions over NVMe-oF and iSCSI with a
web UI whose green dot per export shows whether it is actually served via
RDMA. Includes ZFS zvol management, GPT partitioning, scheduled snapshots
with retention, metrics with a Prometheus endpoint, and Soft-RoCE enablement
for RDMA on plain NICs."""
# Shared-lib deps are listed explicitly: when built on NixOS, dpkg-shlibdeps
# (`$auto`) cannot map nix-store libraries to Debian packages, so we name the
# Ubuntu packages providing each DT_NEEDED of the (patchelf-retargeted)
# binaries. All are correct for Ubuntu 26.04 regardless of build host.
depends = "libc6, libgcc-s1, libpam0g, libaudit1, libcap-ng0, zfsutils-linux, util-linux, rdma-core, iproute2, openssl, kmod"
conf-files = ["/etc/greendotrdma/config.toml", "/etc/pam.d/greendotrdma"]
maintainer-scripts = "../../pkg/debian"
assets = [
    ["target/release/greendot-web", "usr/libexec/greendotrdma/", "755"],
    ["target/release/greendot-helper", "usr/libexec/greendotrdma/", "755"],
    ["../../pkg/sysusers.conf", "usr/lib/sysusers.d/greendotrdma.conf", "644"],
    ["../../pkg/tmpfiles.conf", "usr/lib/tmpfiles.d/greendotrdma.conf", "644"],
    ["../../pkg/pam.greendotrdma", "etc/pam.d/greendotrdma", "644"],
    ["../../pkg/config.toml", "etc/greendotrdma/config.toml", "640"],
]

[[package.metadata.deb.systemd-units]]
unit-name = "greendot-helper"
unit-scripts = "../../pkg"
enable = true
start = true

[[package.metadata.deb.systemd-units]]
unit-name = "greendot-web"
unit-scripts = "../../pkg"
enable = true
start = true

[dependencies]
anyhow = { workspace = true }
greendot-proto = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
askama = "0.14"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = "0.4"
croner = "3"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process", "signal", "time", "sync"] }
toml = "0.9"

[dev-dependencies]
http-body-util = "0.1"
rstest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
