[package]
name = "greendot-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web UI making NVMe-oF/iSCSI exports over RDMA dead easy"

# Build: cargo build --release --workspace && cargo deb -p greendot-web --no-build
[package.metadata.deb]
name = "greendotrdma"
maintainer = "Amirul Ashraf <asdacap@gmail.com>"
copyright = "2026, Amirul Ashraf"
license-file = ["../../LICENSE", "0"]
section = "admin"
priority = "optional"
extended-description = """
GreenDotRDMA exposes ZFS zvols and partitions over NVMe-oF and iSCSI with a
web UI whose green dot per export shows whether it is actually served via
RDMA. Includes ZFS zvol management, GPT partitioning, scheduled snapshots
with retention, metrics with a Prometheus endpoint, and Soft-RoCE enablement
for RDMA on plain NICs."""
# Only true install-time deps are listed: the shared libraries each binary
# links (named explicitly because, when built on NixOS, dpkg-shlibdeps cannot
# map nix-store libraries to Debian packages), `openssl` for the postinst's
# self-signed cert, and `rdma-core` for the RDMA userspace providers. The
# storage/RDMA *CLIs* (zfs, nvme, targetctl, sfdisk, modprobe, rdma) are
# intentionally NOT dependencies: the app detects whichever are missing and
# offers a one-click "Install missing" task (see REQUIRED_CLIS / install.rs).
# This also keeps the package installable on releases that don't ship every CLI.
# (NVMe-oF needs no CLI at all — the helper writes its configfs tree directly.)
depends = "libc6, libgcc-s1, libpam0g, libaudit1, libcap-ng0, openssl, rdma-core"
conf-files = ["/etc/greendotrdma/config.toml", "/etc/pam.d/greendotrdma"]
maintainer-scripts = "../../pkg/debian"
assets = [
    ["target/release/greendot-web", "usr/libexec/greendotrdma/", "755"],
    ["target/release/greendot-cli", "usr/libexec/greendotrdma/", "755"],
    ["target/release/greendot-helper", "usr/libexec/greendotrdma/", "755"],
    ["../../pkg/sysusers.conf", "usr/lib/sysusers.d/greendotrdma.conf", "644"],
    ["../../pkg/tmpfiles.conf", "usr/lib/tmpfiles.d/greendotrdma.conf", "644"],
    ["../../pkg/pam.greendotrdma", "etc/pam.d/greendotrdma", "644"],
    # 644: greendot-web runs as the unprivileged `greendot` user and must read
    # this at startup. It holds no secrets (the TLS key is a separate 640 file).
    ["../../pkg/config.toml", "etc/greendotrdma/config.toml", "644"],
]

[[package.metadata.deb.systemd-units]]
unit-name = "greendot-helper"
unit-scripts = "../../pkg"
enable = true
start = true

[[package.metadata.deb.systemd-units]]
unit-name = "greendot-web"
unit-scripts = "../../pkg"
enable = true
start = true

[dependencies]
anyhow = { workspace = true }
greendot-proto = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
askama = "0.14"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = "0.4"
croner = "3"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process", "signal", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.9"

[dev-dependencies]
http-body-util = "0.1"
rstest = { workspace = true }
tower = { version = "0.5", features = ["util"] }
